@@ -3,30 +3,228 @@ package guess.util;
 import guess.domain.Conference;
 import guess.domain.Language;
 import guess.domain.source.*;
+import guess.domain.source.contentful.ContentfulIncludes;
 import guess.domain.source.contentful.ContentfulLink;
+import guess.domain.source.contentful.ContentfulResponse;
 import guess.domain.source.contentful.ContentfulSys;
+import guess.domain.source.contentful.asset.ContentfulAsset;
+import guess.domain.source.contentful.asset.ContentfulAssetFields;
+import guess.domain.source.contentful.asset.ContentfulAssetFieldsFile;
+import guess.domain.source.contentful.city.ContentfulCity;
+import guess.domain.source.contentful.city.ContentfulCityFields;
+import guess.domain.source.contentful.error.ContentfulError;
+import guess.domain.source.contentful.error.ContentfulErrorDetails;
+import guess.domain.source.contentful.event.ContentfulEvent;
+import guess.domain.source.contentful.event.ContentfulEventFields;
+import guess.domain.source.contentful.event.ContentfulEventIncludes;
+import guess.domain.source.contentful.event.ContentfulEventResponse;
+import guess.domain.source.contentful.eventtype.ContentfulEventType;
+import guess.domain.source.contentful.eventtype.ContentfulEventTypeFields;
+import guess.domain.source.contentful.eventtype.ContentfulEventTypeResponse;
+import guess.domain.source.contentful.locale.ContentfulLocale;
+import guess.domain.source.contentful.locale.ContentfulLocaleResponse;
+import guess.domain.source.contentful.speaker.ContentfulSpeaker;
+import guess.domain.source.contentful.speaker.ContentfulSpeakerFields;
+import guess.domain.source.contentful.speaker.ContentfulSpeakerResponse;
+import guess.domain.source.contentful.talk.ContentfulTalk;
+import guess.domain.source.contentful.talk.ContentfulTalkIncludes;
+import guess.domain.source.contentful.talk.fields.ContentfulTalkFields;
+import guess.domain.source.contentful.talk.fields.ContentfulTalkFieldsCommon;
+import guess.domain.source.contentful.talk.response.ContentfulTalkResponse;
+import guess.domain.source.contentful.talk.response.ContentfulTalkResponseCommon;
 import guess.domain.source.extract.ExtractPair;
 import guess.domain.source.extract.ExtractSet;
+import mockit.*;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
+import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestInstance;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
+import org.springframework.web.client.RestTemplate;
 
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.time.LocalDate;
 import java.time.LocalTime;
 import java.time.ZoneId;
 import java.time.ZonedDateTime;
 import java.util.*;
+import java.util.concurrent.atomic.AtomicLong;
 import java.util.stream.Stream;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.junit.jupiter.params.provider.Arguments.arguments;
 
 @DisplayName("ContentfulUtils class tests")
-public class ContentfulUtilsTest {
+class ContentfulUtilsTest {
+    @Test
+    void getLocales(@Mocked RestTemplate restTemplateMock) throws URISyntaxException {
+        new Expectations() {{
+            ContentfulLocale locale0 = new ContentfulLocale();
+            locale0.setCode("en");
+
+            ContentfulLocale locale1 = new ContentfulLocale();
+            locale1.setCode("ru-RU");
+
+            ContentfulLocaleResponse response = new ContentfulLocaleResponse();
+            response.setItems(List.of(locale0, locale1));
+
+            restTemplateMock.getForObject(withAny(new URI("https://valid.com")), ContentfulLocaleResponse.class);
+            result = response;
+        }};
+
+        assertEquals(List.of("en", "ru-RU"), ContentfulUtils.getLocales());
+    }
+
+    @Test
+    void getEventTypes(@Mocked RestTemplate restTemplateMock) throws URISyntaxException {
+        new Expectations() {{
+            ContentfulEventTypeResponse response = new ContentfulEventTypeResponse();
+            response.setItems(List.of(new ContentfulEventType(), new ContentfulEventType()));
+
+            restTemplateMock.getForObject(withAny(new URI("https://valid.com")), ContentfulEventTypeResponse.class);
+            result = response;
+        }};
+
+        new MockUp<ContentfulUtils>() {
+            @Mock
+            List<EventType> getEventTypes(Invocation invocation) {
+                return invocation.proceed();
+            }
+
+            @Mock
+            EventType createEventType(ContentfulEventType contentfulEventType, AtomicLong id) {
+                return new EventType();
+            }
+        };
+
+        assertEquals(2, ContentfulUtils.getEventTypes().size());
+    }
+
+    @Nested
+    @TestInstance(TestInstance.Lifecycle.PER_CLASS)
+    @DisplayName("createEventType method tests")
+    class CreateEventTypeTest {
+        private Stream<Arguments> data() {
+            final String VK_LINK = "https://vk.com";
+            final String TWITTER_LINK = "https://twitter.com";
+            final String FACEBOOK_LINK = "https://twitter.com";
+            final String YOUTUBE_LINK = "https://youtube.com";
+            final String TELEGRAM_LINK = "https://telegram.org";
+
+            ContentfulEventTypeFields contentfulEventTypeFields0 = new ContentfulEventTypeFields();
+            contentfulEventTypeFields0.setEventName(Map.of(
+                    ContentfulUtils.ENGLISH_LOCALE, "Name0"));
+            contentfulEventTypeFields0.setEventDescriptions(Collections.emptyMap());
+            contentfulEventTypeFields0.setSiteLink(Collections.emptyMap());
+
+            ContentfulEventTypeFields contentfulEventTypeFields1 = new ContentfulEventTypeFields();
+            contentfulEventTypeFields1.setEventName(Map.of(
+                    ContentfulUtils.ENGLISH_LOCALE, "Name1"));
+            contentfulEventTypeFields1.setEventDescriptions(Collections.emptyMap());
+            contentfulEventTypeFields1.setSiteLink(Collections.emptyMap());
+            contentfulEventTypeFields1.setVkLink(Map.of(
+                    ContentfulUtils.ENGLISH_LOCALE, VK_LINK));
+
+            ContentfulEventTypeFields contentfulEventTypeFields2 = new ContentfulEventTypeFields();
+            contentfulEventTypeFields2.setEventName(Map.of(
+                    ContentfulUtils.ENGLISH_LOCALE, "Name2"));
+            contentfulEventTypeFields2.setEventDescriptions(Collections.emptyMap());
+            contentfulEventTypeFields2.setSiteLink(Collections.emptyMap());
+            contentfulEventTypeFields2.setTwLink(Map.of(
+                    ContentfulUtils.ENGLISH_LOCALE, TWITTER_LINK));
+
+            ContentfulEventTypeFields contentfulEventTypeFields3 = new ContentfulEventTypeFields();
+            contentfulEventTypeFields3.setEventName(Map.of(
+                    ContentfulUtils.ENGLISH_LOCALE, "Name3"));
+            contentfulEventTypeFields3.setEventDescriptions(Collections.emptyMap());
+            contentfulEventTypeFields3.setSiteLink(Collections.emptyMap());
+            contentfulEventTypeFields3.setFbLink(Map.of(
+                    ContentfulUtils.ENGLISH_LOCALE, FACEBOOK_LINK));
+
+            ContentfulEventTypeFields contentfulEventTypeFields4 = new ContentfulEventTypeFields();
+            contentfulEventTypeFields4.setEventName(Map.of(
+                    ContentfulUtils.ENGLISH_LOCALE, "Name3"));
+            contentfulEventTypeFields4.setEventDescriptions(Collections.emptyMap());
+            contentfulEventTypeFields4.setSiteLink(Collections.emptyMap());
+            contentfulEventTypeFields4.setYoutubeLink(Map.of(
+                    ContentfulUtils.ENGLISH_LOCALE, YOUTUBE_LINK));
+
+            ContentfulEventTypeFields contentfulEventTypeFields5 = new ContentfulEventTypeFields();
+            contentfulEventTypeFields5.setEventName(Map.of(
+                    ContentfulUtils.ENGLISH_LOCALE, "Name3"));
+            contentfulEventTypeFields5.setEventDescriptions(Collections.emptyMap());
+            contentfulEventTypeFields5.setSiteLink(Collections.emptyMap());
+            contentfulEventTypeFields5.setTelegramLink(Map.of(
+                    ContentfulUtils.ENGLISH_LOCALE, TELEGRAM_LINK));
+
+            ContentfulEventType contentfulEventType0 = new ContentfulEventType();
+            contentfulEventType0.setFields(contentfulEventTypeFields0);
+
+            ContentfulEventType contentfulEventType1 = new ContentfulEventType();
+            contentfulEventType1.setFields(contentfulEventTypeFields1);
+
+            ContentfulEventType contentfulEventType2 = new ContentfulEventType();
+            contentfulEventType2.setFields(contentfulEventTypeFields2);
+
+            ContentfulEventType contentfulEventType3 = new ContentfulEventType();
+            contentfulEventType3.setFields(contentfulEventTypeFields3);
+
+            ContentfulEventType contentfulEventType4 = new ContentfulEventType();
+            contentfulEventType4.setFields(contentfulEventTypeFields4);
+
+            ContentfulEventType contentfulEventType5 = new ContentfulEventType();
+            contentfulEventType5.setFields(contentfulEventTypeFields5);
+
+            EventType eventType0 = new EventType();
+            eventType0.setId(-1);
+
+            EventType eventType1 = new EventType();
+            eventType1.setId(-1);
+            eventType1.setVkLink(VK_LINK);
+
+            EventType eventType2 = new EventType();
+            eventType2.setId(-1);
+            eventType2.setTwitterLink(TWITTER_LINK);
+
+            EventType eventType3 = new EventType();
+            eventType3.setId(-1);
+            eventType3.setFacebookLink(FACEBOOK_LINK);
+
+            EventType eventType4 = new EventType();
+            eventType4.setId(-1);
+            eventType4.setYoutubeLink(YOUTUBE_LINK);
+
+            EventType eventType5 = new EventType();
+            eventType5.setId(-1);
+            eventType5.setTelegramLink(TELEGRAM_LINK);
+
+            return Stream.of(
+                    arguments(contentfulEventType0, new AtomicLong(-1), eventType0),
+                    arguments(contentfulEventType1, new AtomicLong(-1), eventType1),
+                    arguments(contentfulEventType2, new AtomicLong(-1), eventType2),
+                    arguments(contentfulEventType3, new AtomicLong(-1), eventType3),
+                    arguments(contentfulEventType4, new AtomicLong(-1), eventType4),
+                    arguments(contentfulEventType5, new AtomicLong(-1), eventType5)
+            );
+        }
+
+        @ParameterizedTest
+        @MethodSource("data")
+        void createEventType(ContentfulEventType contentfulEventType, AtomicLong id, EventType expected) {
+            EventType actual = ContentfulUtils.createEventType(contentfulEventType, id);
+
+            assertEquals(expected, actual);
+            assertEquals(expected.getVkLink(), actual.getVkLink());
+            assertEquals(expected.getTwitterLink(), actual.getTwitterLink());
+            assertEquals(expected.getFacebookLink(), actual.getFacebookLink());
+            assertEquals(expected.getYoutubeLink(), actual.getYoutubeLink());
+            assertEquals(expected.getTelegramLink(), actual.getTelegramLink());
+        }
+    }
+
     @Nested
     @TestInstance(TestInstance.Lifecycle.PER_CLASS)
     @DisplayName("getFirstMapValue method tests")
@@ -56,6 +254,44 @@ public class ContentfulUtilsTest {
         }
     }
 
+    @Test
+    void getEvents(@Mocked RestTemplate restTemplateMock) throws URISyntaxException {
+        new Expectations() {{
+            ContentfulEventResponse response = new ContentfulEventResponse();
+            response.setItems(List.of(new ContentfulEvent(), new ContentfulEvent()));
+
+            restTemplateMock.getForObject(withAny(new URI("https://valid.com")), ContentfulEventResponse.class);
+            result = response;
+        }};
+
+        new MockUp<ContentfulUtils>() {
+            @Mock
+            List<Event> getEvents(Invocation invocation, String eventName, LocalDate startDate) {
+                return invocation.proceed(eventName, startDate);
+            }
+
+            @Mock
+            Event createEvent(ContentfulEvent e, Map<String, ContentfulCity> cityMap, Set<String> entryErrorSet) {
+                return new Event();
+            }
+
+            @Mock
+            Map<String, ContentfulCity> getCityMap(ContentfulEventResponse response) {
+                return Collections.emptyMap();
+            }
+
+            @Mock
+            Set<String> getErrorSet(ContentfulResponse<?, ? extends ContentfulIncludes> response, String linkType) {
+                return Collections.emptySet();
+            }
+        };
+
+        assertEquals(2, ContentfulUtils.getEvents("JPoint", LocalDate.of(2020, 6, 29)).size());
+        assertEquals(2, ContentfulUtils.getEvents(null, LocalDate.of(2020, 6, 29)).size());
+        assertEquals(2, ContentfulUtils.getEvents("", LocalDate.of(2020, 6, 29)).size());
+        assertEquals(2, ContentfulUtils.getEvents("JPoint", null).size());
+    }
+
     @Nested
     @TestInstance(TestInstance.Lifecycle.PER_CLASS)
     @DisplayName("createUtcZonedDateTime method tests")
@@ -71,6 +307,198 @@ public class ContentfulUtilsTest {
         @MethodSource("data")
         void createUtcZonedDateTime(LocalDate localDate, ZonedDateTime expected) {
             assertEquals(expected, ContentfulUtils.createUtcZonedDateTime(localDate));
+        }
+    }
+
+    @Nested
+    @TestInstance(TestInstance.Lifecycle.PER_CLASS)
+    @DisplayName("createEvent method tests")
+    class CreateEventTest {
+        private Stream<Arguments> data() {
+            final String YOUTUBE_PLAY_LIST = "https://youtube.com";
+            final String MAP_COORDINATES = "59.762236, 30.356121";
+
+            ContentfulSys contentfulSys0 = new ContentfulSys();
+            contentfulSys0.setId("sys0");
+
+            ContentfulSys contentfulSys1 = new ContentfulSys();
+            contentfulSys1.setId("sys1");
+
+            ContentfulSys contentfulSys2 = new ContentfulSys();
+            contentfulSys2.setId("sys2");
+
+            ContentfulSys contentfulSys3 = new ContentfulSys();
+            contentfulSys3.setId("sys3");
+
+            ContentfulSys contentfulSys4 = new ContentfulSys();
+            contentfulSys4.setId("sys4");
+
+            ContentfulLink contentfulLink0 = new ContentfulLink();
+            contentfulLink0.setSys(contentfulSys0);
+
+            ContentfulLink contentfulLink1 = new ContentfulLink();
+            contentfulLink1.setSys(contentfulSys1);
+
+            ContentfulLink contentfulLink2 = new ContentfulLink();
+            contentfulLink2.setSys(contentfulSys2);
+
+            ContentfulLink contentfulLink3 = new ContentfulLink();
+            contentfulLink3.setSys(contentfulSys3);
+
+            ContentfulLink contentfulLink4 = new ContentfulLink();
+            contentfulLink4.setSys(contentfulSys4);
+
+            ContentfulEventFields contentfulEventFields0 = new ContentfulEventFields();
+            contentfulEventFields0.setConferenceName(Map.of(
+                    ContentfulUtils.ENGLISH_LOCALE, "Event Name0"));
+            contentfulEventFields0.setEventStart(Map.of(ContentfulUtils.ENGLISH_LOCALE, "2020-01-01T00:00+03:00"));
+            contentfulEventFields0.setEventCity(Map.of(ContentfulUtils.ENGLISH_LOCALE, contentfulLink0));
+
+            ContentfulEventFields contentfulEventFields1 = new ContentfulEventFields();
+            contentfulEventFields1.setConferenceName(Map.of(
+                    ContentfulUtils.RUSSIAN_LOCALE, "Наименование события1"));
+            contentfulEventFields1.setEventStart(Map.of(ContentfulUtils.ENGLISH_LOCALE, "2020-01-01T00:00+03:00"));
+            contentfulEventFields1.setEventCity(Map.of(ContentfulUtils.ENGLISH_LOCALE, contentfulLink1));
+
+            ContentfulEventFields contentfulEventFields2 = new ContentfulEventFields();
+            contentfulEventFields2.setConferenceName(Map.of(
+                    ContentfulUtils.ENGLISH_LOCALE, "Event Name2"));
+            contentfulEventFields2.setEventStart(Map.of(ContentfulUtils.ENGLISH_LOCALE, "2020-01-01T00:00+03:00"));
+            contentfulEventFields2.setEventEnd(Map.of(ContentfulUtils.ENGLISH_LOCALE, "2020-01-02T00:00+03:00"));
+            contentfulEventFields2.setEventCity(Map.of(ContentfulUtils.ENGLISH_LOCALE, contentfulLink2));
+
+            ContentfulEventFields contentfulEventFields3 = new ContentfulEventFields();
+            contentfulEventFields3.setConferenceName(Map.of(
+                    ContentfulUtils.ENGLISH_LOCALE, "Event Name3"));
+            contentfulEventFields3.setEventStart(Map.of(ContentfulUtils.ENGLISH_LOCALE, "2020-01-01T00:00+03:00"));
+            contentfulEventFields3.setEventCity(Map.of(ContentfulUtils.ENGLISH_LOCALE, contentfulLink3));
+            contentfulEventFields3.setYoutubePlayList(Map.of(ContentfulUtils.ENGLISH_LOCALE, YOUTUBE_PLAY_LIST));
+
+            ContentfulEventFields contentfulEventFields4 = new ContentfulEventFields();
+            contentfulEventFields4.setConferenceName(Map.of(
+                    ContentfulUtils.ENGLISH_LOCALE, "Event Name4"));
+            contentfulEventFields4.setEventStart(Map.of(ContentfulUtils.ENGLISH_LOCALE, "2020-01-01T00:00+03:00"));
+            contentfulEventFields4.setEventCity(Map.of(ContentfulUtils.ENGLISH_LOCALE, contentfulLink4));
+            contentfulEventFields4.setAddressLink(Map.of(ContentfulUtils.ENGLISH_LOCALE, MAP_COORDINATES));
+
+            ContentfulEvent contentfulEvent0 = new ContentfulEvent();
+            contentfulEvent0.setFields(contentfulEventFields0);
+
+            ContentfulEvent contentfulEvent1 = new ContentfulEvent();
+            contentfulEvent1.setFields(contentfulEventFields1);
+
+            ContentfulEvent contentfulEvent2 = new ContentfulEvent();
+            contentfulEvent2.setFields(contentfulEventFields2);
+
+            ContentfulEvent contentfulEvent3 = new ContentfulEvent();
+            contentfulEvent3.setFields(contentfulEventFields3);
+
+            ContentfulEvent contentfulEvent4 = new ContentfulEvent();
+            contentfulEvent4.setFields(contentfulEventFields4);
+
+            // Events
+            Event event0 = new Event();
+            event0.setId(-1);
+            event0.setName(List.of(new LocaleItem(Language.ENGLISH.getCode(), "Event Name0")));
+            event0.setStartDate(LocalDate.of(2020, 1, 1));
+            event0.setEndDate(LocalDate.of(2020, 1, 1));
+
+            Event event1 = new Event();
+            event1.setId(-1);
+            event1.setName(List.of(new LocaleItem(Language.ENGLISH.getCode(), "Наименование события1")));
+            event1.setStartDate(LocalDate.of(2020, 1, 1));
+            event1.setEndDate(LocalDate.of(2020, 1, 1));
+
+            Event event2 = new Event();
+            event2.setId(-1);
+            event2.setName(List.of(new LocaleItem(Language.ENGLISH.getCode(), "Event Name2")));
+            event2.setStartDate(LocalDate.of(2020, 1, 1));
+            event2.setEndDate(LocalDate.of(2020, 1, 2));
+
+            Event event3 = new Event();
+            event3.setId(-1);
+            event3.setName(List.of(new LocaleItem(Language.ENGLISH.getCode(), "Event Name3")));
+            event3.setStartDate(LocalDate.of(2020, 1, 1));
+            event3.setEndDate(LocalDate.of(2020, 1, 1));
+            event3.setYoutubeLink(YOUTUBE_PLAY_LIST);
+
+            Place place4 = new Place();
+            place4.setMapCoordinates(MAP_COORDINATES);
+
+            Event event4 = new Event();
+            event4.setId(-1);
+            event4.setName(List.of(new LocaleItem(Language.ENGLISH.getCode(), "Event Name4")));
+            event4.setStartDate(LocalDate.of(2020, 1, 1));
+            event4.setEndDate(LocalDate.of(2020, 1, 1));
+            event4.setPlace(place4);
+
+            // Cities
+            ContentfulCityFields contentfulCityFields0 = new ContentfulCityFields();
+            contentfulCityFields0.setCityName(Map.of(
+                    ContentfulUtils.ENGLISH_LOCALE, "City Name0"));
+
+            ContentfulCityFields contentfulCityFields1 = new ContentfulCityFields();
+            contentfulCityFields1.setCityName(Map.of(
+                    ContentfulUtils.ENGLISH_LOCALE, "City Name1"));
+
+            ContentfulCityFields contentfulCityFields2 = new ContentfulCityFields();
+            contentfulCityFields2.setCityName(Map.of(
+                    ContentfulUtils.ENGLISH_LOCALE, "City Name2"));
+
+            ContentfulCityFields contentfulCityFields3 = new ContentfulCityFields();
+            contentfulCityFields3.setCityName(Map.of(
+                    ContentfulUtils.ENGLISH_LOCALE, "City Name3"));
+
+            ContentfulCityFields contentfulCityFields4 = new ContentfulCityFields();
+            contentfulCityFields4.setCityName(Map.of(
+                    ContentfulUtils.ENGLISH_LOCALE, "City Name4"));
+
+            ContentfulCity contentfulCity0 = new ContentfulCity();
+            contentfulCity0.setSys(contentfulSys0);
+            contentfulCity0.setFields(contentfulCityFields0);
+
+            ContentfulCity contentfulCity1 = new ContentfulCity();
+            contentfulCity1.setSys(contentfulSys1);
+            contentfulCity1.setFields(contentfulCityFields1);
+
+            ContentfulCity contentfulCity2 = new ContentfulCity();
+            contentfulCity2.setSys(contentfulSys1);
+            contentfulCity2.setFields(contentfulCityFields2);
+
+            ContentfulCity contentfulCity3 = new ContentfulCity();
+            contentfulCity3.setSys(contentfulSys1);
+            contentfulCity3.setFields(contentfulCityFields3);
+
+            ContentfulCity contentfulCity4 = new ContentfulCity();
+            contentfulCity4.setSys(contentfulSys1);
+            contentfulCity4.setFields(contentfulCityFields4);
+
+            Map<String, ContentfulCity> cityMap = Map.of("sys0", contentfulCity0, "sys1", contentfulCity1,
+                    "sys2", contentfulCity2, "sys3", contentfulCity3, "sys4", contentfulCity4);
+            Set<String> entryErrorSet = Collections.emptySet();
+
+            return Stream.of(
+                    arguments(contentfulEvent0, cityMap, entryErrorSet, event0),
+                    arguments(contentfulEvent1, cityMap, entryErrorSet, event1),
+                    arguments(contentfulEvent2, cityMap, entryErrorSet, event2),
+                    arguments(contentfulEvent3, cityMap, entryErrorSet, event3),
+                    arguments(contentfulEvent4, cityMap, entryErrorSet, event4)
+            );
+        }
+
+        @ParameterizedTest
+        @MethodSource("data")
+        void createEvent(ContentfulEvent contentfulEvent, Map<String, ContentfulCity> cityMap, Set<String> entryErrorSet, Event expected) {
+            Event actual = ContentfulUtils.createEvent(contentfulEvent, cityMap, entryErrorSet);
+
+            assertEquals(expected, actual);
+            assertEquals(expected.getName(), actual.getName());
+            assertEquals(expected.getEndDate(), actual.getEndDate());
+            assertEquals(expected.getYoutubeLink(), actual.getYoutubeLink());
+
+            String expectedMapCoordinates = (expected.getPlace() != null) ? expected.getPlace().getMapCoordinates() : null;
+            String actualMapCoordinates = (actual.getPlace() != null) ? actual.getPlace().getMapCoordinates() : null;
+            assertEquals(expectedMapCoordinates, actualMapCoordinates);
         }
     }
 
@@ -97,44 +525,704 @@ public class ContentfulUtilsTest {
     @DisplayName("getEvent method tests")
     class GetEventTest {
         private Stream<Arguments> data() {
+            Event event0 = new Event(
+                    -1L,
+                    null,
+                    List.of(
+                            new LocaleItem(Language.ENGLISH.getCode(), "Event Name0"),
+                            new LocaleItem(Language.RUSSIAN.getCode(), "Наименование события0")),
+                    new Event.EventDates(
+                            LocalDate.of(2016, 12, 7),
+                            LocalDate.of(2016, 12, 7)
+                    ),
+                    new Event.EventLinks(Collections.emptyList(), null),
+                    new Place(),
+                    Collections.emptyList());
+
+            Event event1 = new Event(
+                    -1L,
+                    null,
+                    List.of(
+                            new LocaleItem(Language.ENGLISH.getCode(), "Event Name1"),
+                            new LocaleItem(Language.RUSSIAN.getCode(), "Наименование события1")),
+                    new Event.EventDates(
+                            LocalDate.of(2017, 12, 7),
+                            LocalDate.of(2017, 12, 7)
+                    ),
+                    new Event.EventLinks(Collections.emptyList(), null),
+                    new Place(),
+                    Collections.emptyList());
+
             return Stream.of(
-                    arguments(Conference.DOT_NEXT, LocalDate.of(2016, 12, 7), new Event(
-                            -1L,
-                            null,
-                            List.of(
-                                    new LocaleItem("en", "DotNext 2016 Helsinki"),
-                                    new LocaleItem("ru", "DotNext 2016 Хельсинки")),
-                            new Event.EventDates(
-                                    LocalDate.of(2016, 12, 7),
-                                    LocalDate.of(2016, 12, 7)
-                            ),
-                            new Event.EventLinks(
-                                    List.of(
-                                            new LocaleItem("en", "https://dotnext-helsinki.com"),
-                                            new LocaleItem("ru", "https://dotnext-helsinki.com")),
-                                    "https://www.youtube.com/playlist?list=PLtWrKx3nUGBcaA5j9UT6XMnoGM6a2iCE5"
-                            ),
-                            new Place(
-                                    15,
-                                    List.of(
-                                            new LocaleItem("en", "Helsinki"),
-                                            new LocaleItem("ru", "Хельсинки")),
-                                    List.of(
-                                            new LocaleItem("en", "Microsoft Talo, Keilalahdentie 2-4, 02150 Espoo")),
-                                    "60.1704769, 24.8279349"),
-                            Collections.emptyList()))
+                    arguments(Conference.DOT_NEXT, LocalDate.of(2016, 12, 7), Collections.emptyList(), null, event0),
+                    arguments(Conference.DOT_NEXT, LocalDate.of(2017, 12, 7), Collections.emptyList(), IllegalStateException.class, null),
+                    arguments(Conference.DOT_NEXT, LocalDate.of(2017, 12, 7), List.of(event0, event1), IllegalStateException.class, null),
+                    arguments(Conference.DOT_NEXT, LocalDate.of(2017, 12, 7), List.of(event0), null, event0)
             );
         }
 
         @ParameterizedTest
         @MethodSource("data")
-        void getEvent(Conference conference, LocalDate startDate, Event expected) {
-            Event event = ContentfulUtils.getEvent(conference, startDate);
+        void getEvent(Conference conference, LocalDate startDate, List<Event> events, Class<? extends Throwable> expectedException, Event expectedEvent) {
+            new MockUp<ContentfulUtils>() {
+                @Mock
+                List<Event> getEvents(String eventName, LocalDate startDate) {
+                    return events;
+                }
 
-            assertEquals(expected, event);
-            assertEquals(expected.getName(), event.getName());
-            assertEquals(expected.getStartDate(), event.getStartDate());
-            assertEquals(expected.getEndDate(), event.getEndDate());
+                @Mock
+                Event getEvent(Invocation invocation, Conference conference, LocalDate startDate) {
+                    return invocation.proceed(conference, startDate);
+                }
+
+                @Mock
+                Event fixNonexistentEventError(Conference conference, LocalDate startDate) {
+                    if (Conference.DOT_NEXT.equals(conference) && LocalDate.of(2016, 12, 7).equals(startDate)) {
+                        return new Event(
+                                -1L,
+                                null,
+                                List.of(
+                                        new LocaleItem("en", "Event Name0"),
+                                        new LocaleItem("ru", "Наименование события0")),
+                                new Event.EventDates(
+                                        LocalDate.of(2016, 12, 7),
+                                        LocalDate.of(2016, 12, 7)
+                                ),
+                                new Event.EventLinks(Collections.emptyList(), null),
+                                new Place(),
+                                Collections.emptyList());
+                    } else {
+                        return null;
+                    }
+                }
+            };
+
+            if (expectedException == null) {
+                Event event = ContentfulUtils.getEvent(conference, startDate);
+
+                assertEquals(expectedEvent, event);
+                assertEquals(expectedEvent.getName(), event.getName());
+                assertEquals(expectedEvent.getStartDate(), event.getStartDate());
+                assertEquals(expectedEvent.getEndDate(), event.getEndDate());
+            } else {
+                assertThrows(expectedException, () -> ContentfulUtils.getEvent(conference, startDate));
+            }
+        }
+    }
+
+    @Test
+    void getSpeakers(@Mocked RestTemplate restTemplateMock) throws URISyntaxException {
+        new Expectations() {{
+            ContentfulSpeakerResponse response = new ContentfulSpeakerResponse();
+            response.setItems(List.of(new ContentfulSpeaker(), new ContentfulSpeaker()));
+
+            restTemplateMock.getForObject(withAny(new URI("https://valid.com")), ContentfulSpeakerResponse.class);
+            result = response;
+        }};
+
+        new MockUp<ContentfulUtils>() {
+            @Mock
+            List<Speaker> getSpeakers(Invocation invocation, ContentfulUtils.ConferenceSpaceInfo conferenceSpaceInfo, String conferenceCode) {
+                return invocation.proceed(conferenceSpaceInfo, conferenceCode);
+            }
+
+            @Mock
+            Speaker createSpeaker(ContentfulSpeaker contentfulSpeaker, Map<String, ContentfulAsset> assetMap,
+                                  Set<String> assetErrorSet, AtomicLong id, boolean checkEnTextExistence) {
+                return new Speaker();
+            }
+
+            @Mock
+            Map<String, ContentfulAsset> getAssetMap(ContentfulResponse<?, ? extends ContentfulIncludes> response) {
+                return Collections.emptyMap();
+            }
+
+            @Mock
+            Set<String> getErrorSet(ContentfulResponse<?, ? extends ContentfulIncludes> response, String linkType) {
+                return Collections.emptySet();
+            }
+        };
+
+        assertEquals(2, ContentfulUtils.getSpeakers(ContentfulUtils.ConferenceSpaceInfo.COMMON_SPACE_INFO, "code").size());
+        assertEquals(2, ContentfulUtils.getSpeakers(ContentfulUtils.ConferenceSpaceInfo.HOLY_JS_SPACE_INFO, "code").size());
+        assertEquals(2, ContentfulUtils.getSpeakers(ContentfulUtils.ConferenceSpaceInfo.COMMON_SPACE_INFO, null).size());
+        assertEquals(2, ContentfulUtils.getSpeakers(ContentfulUtils.ConferenceSpaceInfo.COMMON_SPACE_INFO, "").size());
+    }
+
+    @Test
+    void createSpeaker() {
+        new MockUp<ContentfulUtils>() {
+            @Mock
+            Speaker createSpeaker(Invocation invocation, ContentfulSpeaker contentfulSpeaker, Map<String, ContentfulAsset> assetMap,
+                                  Set<String> assetErrorSet, AtomicLong id, boolean checkEnTextExistence) {
+                return invocation.proceed(contentfulSpeaker, assetMap, assetErrorSet, id, checkEnTextExistence);
+            }
+
+            @Mock
+            String extractPhoto(ContentfulLink link, Map<String, ContentfulAsset> assetMap,
+                                Set<String> assetErrorSet, String speakerNameEn) {
+                return null;
+            }
+
+            @Mock
+            String extractTwitter(String value) {
+                return null;
+            }
+
+            @Mock
+            String extractGitHub(String value) {
+                return null;
+            }
+
+            @Mock
+            boolean extractBoolean(Boolean value) {
+                return true;
+            }
+
+            @Mock
+            List<LocaleItem> extractLocaleItems(String enText, String ruText, boolean checkEnTextExistence) {
+                return Collections.emptyList();
+            }
+        };
+
+        ContentfulSpeaker contentfulSpeaker = new ContentfulSpeaker();
+        contentfulSpeaker.setFields(new ContentfulSpeakerFields());
+
+        Map<String, ContentfulAsset> assetMap = Collections.emptyMap();
+        Set<String> assetErrorSet = Collections.emptySet();
+        AtomicLong id = new AtomicLong(42);
+
+        Speaker speaker = new Speaker();
+        speaker.setId(42);
+
+        assertEquals(42, ContentfulUtils.createSpeaker(contentfulSpeaker, assetMap, assetErrorSet, id, true).getId());
+    }
+
+    @Nested
+    @TestInstance(TestInstance.Lifecycle.PER_CLASS)
+    @DisplayName("extractPhoto method tests")
+    class ExtractPhotoTest {
+        private static final String ASSET_URL = "https://valid.com";
+
+        private Stream<Arguments> data() {
+            ContentfulSys contentfulSys0 = new ContentfulSys();
+            contentfulSys0.setId("id0");
+
+            ContentfulSys contentfulSys1 = new ContentfulSys();
+            contentfulSys1.setId("id1");
+
+            ContentfulSys contentfulSys2 = new ContentfulSys();
+            contentfulSys2.setId("id2");
+
+            ContentfulAssetFields contentfulAssetFields2 = new ContentfulAssetFields();
+            contentfulAssetFields2.setFile(new ContentfulAssetFieldsFile());
+
+            ContentfulAsset contentfulAsset2 = new ContentfulAsset();
+            contentfulAsset2.setFields(contentfulAssetFields2);
+
+            Map<String, ContentfulAsset> assetMap2 = Map.of("id2", contentfulAsset2);
+
+            ContentfulLink link0 = new ContentfulLink();
+            link0.setSys(contentfulSys0);
+
+            ContentfulLink link1 = new ContentfulLink();
+            link1.setSys(contentfulSys1);
+
+            ContentfulLink link2 = new ContentfulLink();
+            link2.setSys(contentfulSys2);
+
+            return Stream.of(
+                    arguments(link0, Collections.emptyMap(), Set.of("id0"), "Name0", null, null),
+                    arguments(link1, Collections.emptyMap(), Collections.emptySet(), "Name1", NullPointerException.class, null),
+                    arguments(link2, assetMap2, Collections.emptySet(), "Name2", null, ASSET_URL)
+            );
+        }
+
+        @ParameterizedTest
+        @MethodSource("data")
+        void extractPhoto(ContentfulLink link, Map<String, ContentfulAsset> assetMap, Set<String> assetErrorSet,
+                          String speakerNameEn, Class<? extends Throwable> expectedException, String expectedValue) {
+            new MockUp<ContentfulUtils>() {
+                @Mock
+                String extractPhoto(Invocation invocation, ContentfulLink link, Map<String, ContentfulAsset> assetMap,
+                                    Set<String> assetErrorSet, String speakerNameEn) {
+                    return invocation.proceed(link, assetMap, assetErrorSet, speakerNameEn);
+                }
+
+                @Mock
+                String extractAssetUrl(String value) {
+                    return ASSET_URL;
+                }
+            };
+
+            if (expectedException == null) {
+                assertEquals(expectedValue, ContentfulUtils.extractPhoto(link, assetMap, assetErrorSet, speakerNameEn));
+            } else {
+                assertThrows(expectedException, () -> ContentfulUtils.extractPhoto(link, assetMap, assetErrorSet, speakerNameEn));
+            }
+        }
+    }
+
+    @Nested
+    @TestInstance(TestInstance.Lifecycle.PER_CLASS)
+    @DisplayName("extractTwitter method tests")
+    class ExtractTwitterTest {
+        private Stream<Arguments> data() {
+            return Stream.of(
+                    arguments(null, null, null),
+                    arguments("", null, ""),
+                    arguments(" ", null, ""),
+                    arguments("arungupta", null, "arungupta"),
+                    arguments(" arungupta", null, "arungupta"),
+                    arguments("arungupta ", null, "arungupta"),
+                    arguments(" arungupta ", null, "arungupta"),
+                    arguments("tagir_valeev", null, "tagir_valeev"),
+                    arguments("kuksenk0", null, "kuksenk0"),
+                    arguments("DaschnerS", null, "DaschnerS"),
+                    arguments("@dougqh", null, "dougqh"),
+                    arguments("42", null, "42"),
+                    arguments("@42", null, "42"),
+                    arguments("%", IllegalArgumentException.class, null),
+                    arguments("%42", IllegalArgumentException.class, null),
+                    arguments("%dougqh", IllegalArgumentException.class, null),
+                    arguments("dougqh%", IllegalArgumentException.class, null),
+                    arguments("dou%gqh", IllegalArgumentException.class, null)
+            );
+        }
+
+        @ParameterizedTest
+        @MethodSource("data")
+        void extractTwitter(String value, Class<? extends Throwable> expectedException, String expectedValue) {
+            if (expectedException == null) {
+                assertEquals(expectedValue, ContentfulUtils.extractTwitter(value));
+            } else {
+                assertThrows(expectedException, () -> ContentfulUtils.extractTwitter(value));
+            }
+        }
+    }
+
+    @Nested
+    @TestInstance(TestInstance.Lifecycle.PER_CLASS)
+    @DisplayName("extractGitHub method tests")
+    class ExtractGitHubTest {
+        private Stream<Arguments> data() {
+            return Stream.of(
+                    arguments(null, null, null),
+                    arguments("", null, ""),
+                    arguments(" ", null, ""),
+                    arguments("cloudkserg", null, "cloudkserg"),
+                    arguments(" cloudkserg", null, "cloudkserg"),
+                    arguments("cloudkserg ", null, "cloudkserg"),
+                    arguments(" cloudkserg ", null, "cloudkserg"),
+                    arguments("pjBooms", null, "pjBooms"),
+                    arguments("andre487", null, "andre487"),
+                    arguments("Marina-Miranovich", null, "Marina-Miranovich"),
+                    arguments("https://github.com/inponomarev", null, "inponomarev"),
+                    arguments("http://github.com/inponomarev", null, "inponomarev"),
+                    arguments("https://niquola.github.io/blog/", null, "niquola"),
+                    arguments("http://niquola.github.io/blog/", null, "niquola"),
+                    arguments("%", IllegalArgumentException.class, null),
+                    arguments("%42", IllegalArgumentException.class, null),
+                    arguments("%dougqh", IllegalArgumentException.class, null),
+                    arguments("dougqh%", IllegalArgumentException.class, null),
+                    arguments("dou%gqh", IllegalArgumentException.class, null)
+            );
+        }
+
+        @ParameterizedTest
+        @MethodSource("data")
+        void extractGitHub(String value, Class<? extends Throwable> expectedException, String expectedValue) {
+            if (expectedException == null) {
+                assertEquals(expectedValue, ContentfulUtils.extractGitHub(value));
+            } else {
+                assertThrows(IllegalArgumentException.class, () -> ContentfulUtils.extractGitHub(value));
+            }
+        }
+    }
+
+    @Test
+    void getSpeakers() {
+        new MockUp<ContentfulUtils>() {
+            @Mock
+            List<Speaker> getSpeakers(ContentfulUtils.ConferenceSpaceInfo conferenceSpaceInfo, String conferenceCode) {
+                return Collections.emptyList();
+            }
+
+            @Mock
+            List<Speaker> getSpeakers(Invocation invocation, Conference conference, String conferenceCode) {
+                return invocation.proceed(conference, conferenceCode);
+            }
+        };
+
+        assertDoesNotThrow(() -> ContentfulUtils.getSpeakers(Conference.JPOINT, "code"));
+    }
+
+    private static ContentfulTalk<ContentfulTalkFieldsCommon> createContentfulTalk(Boolean sdTrack, Boolean demoStage) {
+        ContentfulTalkFieldsCommon contentfulTalkFieldsCommon = new ContentfulTalkFieldsCommon();
+        contentfulTalkFieldsCommon.setSdTrack(sdTrack);
+        contentfulTalkFieldsCommon.setDemoStage(demoStage);
+
+        ContentfulTalk<ContentfulTalkFieldsCommon> contentfulTalk = new ContentfulTalk<>();
+        contentfulTalk.setFields(contentfulTalkFieldsCommon);
+
+        return contentfulTalk;
+    }
+
+    @Test
+    void getTalks(@Mocked RestTemplate restTemplateMock) throws URISyntaxException {
+        new Expectations() {{
+            ContentfulTalkResponse<ContentfulTalkFieldsCommon> response = new ContentfulTalkResponseCommon();
+            response.setItems(List.of(
+                    createContentfulTalk(null, null),
+                    createContentfulTalk(null, Boolean.TRUE),
+                    createContentfulTalk(null, Boolean.FALSE),
+                    createContentfulTalk(Boolean.TRUE, null),
+                    createContentfulTalk(Boolean.TRUE, Boolean.TRUE),
+                    createContentfulTalk(Boolean.TRUE, Boolean.FALSE),
+                    createContentfulTalk(Boolean.FALSE, null),
+                    createContentfulTalk(Boolean.FALSE, Boolean.TRUE),
+                    createContentfulTalk(Boolean.FALSE, Boolean.FALSE)
+            ));
+
+            restTemplateMock.getForObject(withAny(new URI("https://valid.com")), ContentfulTalkResponseCommon.class);
+            result = response;
+        }};
+
+        new MockUp<ContentfulUtils>() {
+            @Mock
+            List<Talk> getTalks(Invocation invocation, ContentfulUtils.ConferenceSpaceInfo conferenceSpaceInfo, String conferenceCode) {
+                return invocation.proceed(conferenceSpaceInfo, conferenceCode);
+            }
+
+            @Mock
+            Talk createTalk(ContentfulTalk<? extends ContentfulTalkFields> contentfulTalk, Map<String, ContentfulAsset> assetMap,
+                            Set<String> entryErrorSet, Set<String> assetErrorSet, Map<String, Speaker> speakerMap, AtomicLong id) {
+                return new Talk();
+            }
+
+            @Mock
+            Map<String, Speaker> getSpeakerMap(ContentfulTalkResponse<? extends ContentfulTalkFields> response,
+                                               Map<String, ContentfulAsset> assetMap, Set<String> assetErrorSet) {
+                return Collections.emptyMap();
+            }
+
+            @Mock
+            Map<String, ContentfulAsset> getAssetMap(ContentfulResponse<?, ? extends ContentfulIncludes> response) {
+                return Collections.emptyMap();
+            }
+
+            @Mock
+            Set<String> getErrorSet(ContentfulResponse<?, ? extends ContentfulIncludes> response, String linkType) {
+                return Collections.emptySet();
+            }
+
+            @Mock
+            void fixEntryNotResolvableError(ContentfulUtils.ConferenceSpaceInfo conferenceSpaceInfo,
+                                            Set<String> entryErrorSet, Map<String, Speaker> speakerMap) {
+            }
+        };
+
+        assertEquals(4, ContentfulUtils.getTalks(ContentfulUtils.ConferenceSpaceInfo.COMMON_SPACE_INFO, "code").size());
+        assertEquals(4, ContentfulUtils.getTalks(ContentfulUtils.ConferenceSpaceInfo.COMMON_SPACE_INFO, null).size());
+        assertEquals(4, ContentfulUtils.getTalks(ContentfulUtils.ConferenceSpaceInfo.COMMON_SPACE_INFO, "").size());
+    }
+
+    @Test
+    void createTalk() {
+        new MockUp<ContentfulUtils>() {
+            @Mock
+            Talk createTalk(Invocation invocation, ContentfulTalk<? extends ContentfulTalkFields> contentfulTalk, Map<String, ContentfulAsset> assetMap,
+                            Set<String> entryErrorSet, Set<String> assetErrorSet, Map<String, Speaker> speakerMap, AtomicLong id) {
+                return invocation.proceed(contentfulTalk, assetMap, entryErrorSet, assetErrorSet, speakerMap, id);
+            }
+
+            @Mock
+            List<LocaleItem> extractLocaleItems(String enText, String ruText, boolean checkEnTextExistence) {
+                return Collections.emptyList();
+            }
+
+            @Mock
+            String extractLanguage(Boolean language) {
+                return null;
+            }
+
+            @Mock
+            List<String> extractPresentationLinks(List<ContentfulLink> links, Map<String, ContentfulAsset> assetMap,
+                                                  Set<String> assetErrorSet, String talkNameEn) {
+                return Collections.emptyList();
+            }
+
+            @Mock
+            List<ContentfulLink> combineContentfulLinks(List<ContentfulLink> presentations, ContentfulLink presentation) {
+                return Collections.emptyList();
+            }
+
+            @Mock
+            List<String> extractVideoLinks(String videoLink) {
+                return Collections.emptyList();
+            }
+        };
+
+        ContentfulSys contentfulSys0 = new ContentfulSys();
+        contentfulSys0.setId("id0");
+
+        ContentfulSys contentfulSys1 = new ContentfulSys();
+        contentfulSys1.setId("id1");
+
+        ContentfulSys contentfulSys2 = new ContentfulSys();
+        contentfulSys2.setId("id2");
+
+        ContentfulLink contentfulLink0 = new ContentfulLink();
+        contentfulLink0.setSys(contentfulSys0);
+
+        ContentfulLink contentfulLink1 = new ContentfulLink();
+        contentfulLink1.setSys(contentfulSys1);
+
+        ContentfulLink contentfulLink2 = new ContentfulLink();
+        contentfulLink2.setSys(contentfulSys2);
+
+        ContentfulTalkFieldsCommon contentfulTalkFieldsCommon0 = new ContentfulTalkFieldsCommon();
+        contentfulTalkFieldsCommon0.setSpeakers(List.of(contentfulLink0));
+
+        ContentfulTalkFieldsCommon contentfulTalkFieldsCommon1 = new ContentfulTalkFieldsCommon();
+        contentfulTalkFieldsCommon1.setSpeakers(List.of(contentfulLink1));
+
+        ContentfulTalkFieldsCommon contentfulTalkFieldsCommon2 = new ContentfulTalkFieldsCommon();
+        contentfulTalkFieldsCommon2.setSpeakers(List.of(contentfulLink2));
+
+        ContentfulTalk<ContentfulTalkFieldsCommon> contentfulTalk0 = new ContentfulTalk<>();
+        contentfulTalk0.setFields(contentfulTalkFieldsCommon0);
+
+        ContentfulTalk<ContentfulTalkFieldsCommon> contentfulTalk1 = new ContentfulTalk<>();
+        contentfulTalk1.setFields(contentfulTalkFieldsCommon1);
+
+        ContentfulTalk<ContentfulTalkFieldsCommon> contentfulTalk2 = new ContentfulTalk<>();
+        contentfulTalk2.setFields(contentfulTalkFieldsCommon2);
+
+        Map<String, ContentfulAsset> assetMap = Collections.emptyMap();
+        Set<String> entryErrorSet = Set.of("id0");
+        Set<String> assetErrorSet = Collections.emptySet();
+        Map<String, Speaker> speakerMap = Map.of("id2", new Speaker());
+
+        AtomicLong id0 = new AtomicLong(42);
+        AtomicLong id1 = new AtomicLong(43);
+        AtomicLong id2 = new AtomicLong(44);
+
+        assertThrows(IllegalArgumentException.class, () -> ContentfulUtils.createTalk(contentfulTalk0, assetMap, entryErrorSet, assetErrorSet, speakerMap, id0));
+        assertThrows(NullPointerException.class, () -> ContentfulUtils.createTalk(contentfulTalk1, assetMap, entryErrorSet, assetErrorSet, speakerMap, id1));
+        assertEquals(44, ContentfulUtils.createTalk(contentfulTalk2, assetMap, entryErrorSet, assetErrorSet, speakerMap, id2).getId());
+    }
+
+    @Test
+    void testGetTalks() {
+        new MockUp<ContentfulUtils>() {
+            @Mock
+            List<Talk> getTalks(ContentfulUtils.ConferenceSpaceInfo conferenceSpaceInfo, String conferenceCode) {
+                return Collections.emptyList();
+            }
+
+            @Mock
+            List<Talk> getTalks(Invocation invocation, Conference conference, String conferenceCode) {
+                return invocation.proceed(conference, conferenceCode);
+            }
+        };
+
+        assertDoesNotThrow(() -> ContentfulUtils.getTalks(Conference.JPOINT, "code"));
+    }
+
+    @Nested
+    @TestInstance(TestInstance.Lifecycle.PER_CLASS)
+    @DisplayName("getSpeakerMap method tests")
+    class GetSpeakerMapTest {
+        private final Speaker speaker;
+
+        public GetSpeakerMapTest() {
+            speaker = new Speaker();
+            speaker.setId(42);
+        }
+
+        private Stream<Arguments> data() {
+            ContentfulSys contentfulSys1 = new ContentfulSys();
+            contentfulSys1.setId("id1");
+
+            ContentfulSpeaker contentfulSpeaker1 = new ContentfulSpeaker();
+            contentfulSpeaker1.setSys(contentfulSys1);
+
+            ContentfulTalkIncludes contentfulTalkIncludes1 = new ContentfulTalkIncludes();
+            contentfulTalkIncludes1.setEntry(List.of(contentfulSpeaker1));
+
+            ContentfulTalkResponseCommon contentfulTalkResponseCommon0 = new ContentfulTalkResponseCommon();
+
+            ContentfulTalkResponseCommon contentfulTalkResponseCommon1 = new ContentfulTalkResponseCommon();
+            contentfulTalkResponseCommon1.setIncludes(contentfulTalkIncludes1);
+
+            return Stream.of(
+                    arguments(contentfulTalkResponseCommon0, null, null, Collections.emptyMap()),
+                    arguments(contentfulTalkResponseCommon1, null, null, Map.of("id1", speaker))
+            );
+        }
+
+        @ParameterizedTest
+        @MethodSource("data")
+        void getSpeakerMap(ContentfulTalkResponse<? extends ContentfulTalkFields> response,
+                           Map<String, ContentfulAsset> assetMap, Set<String> assetErrorSet,
+                           Map<String, Speaker> expected) {
+            new MockUp<ContentfulUtils>() {
+                @Mock
+                Speaker createSpeaker(ContentfulSpeaker contentfulSpeaker, Map<String, ContentfulAsset> assetMap,
+                                      Set<String> assetErrorSet, AtomicLong id, boolean checkEnTextExistence) {
+                    return speaker;
+                }
+
+                @Mock
+                Map<String, Speaker> getSpeakerMap(Invocation invocation, ContentfulTalkResponse<? extends ContentfulTalkFields> response,
+                                                   Map<String, ContentfulAsset> assetMap, Set<String> assetErrorSet) {
+                    return invocation.proceed(response, assetMap, assetErrorSet);
+                }
+            };
+
+            assertEquals(expected, ContentfulUtils.getSpeakerMap(response, assetMap, assetErrorSet));
+        }
+    }
+
+    @Nested
+    @TestInstance(TestInstance.Lifecycle.PER_CLASS)
+    @DisplayName("getAssetMap method tests")
+    class GetAssetMapTest {
+        private Stream<Arguments> data() {
+            ContentfulSys contentfulSys1 = new ContentfulSys();
+            contentfulSys1.setId("id1");
+
+            ContentfulAsset contentfulAsset1 = new ContentfulAsset();
+            contentfulAsset1.setSys(contentfulSys1);
+
+            ContentfulIncludes contentfulIncludes1 = new ContentfulIncludes();
+            contentfulIncludes1.setAsset(List.of(contentfulAsset1));
+
+            ContentfulSpeakerResponse response0 = new ContentfulSpeakerResponse();
+
+            ContentfulSpeakerResponse response1 = new ContentfulSpeakerResponse();
+            response1.setIncludes(contentfulIncludes1);
+
+            return Stream.of(
+                    arguments(response0, Collections.emptyMap()),
+                    arguments(response1, Map.of("id1", contentfulAsset1))
+            );
+        }
+
+        @ParameterizedTest
+        @MethodSource("data")
+        void getAssetMap(ContentfulResponse<?, ? extends ContentfulIncludes> response,
+                         Map<String, ContentfulAsset> expected) {
+            assertEquals(expected, ContentfulUtils.getAssetMap(response));
+        }
+    }
+
+
+    @Nested
+    @TestInstance(TestInstance.Lifecycle.PER_CLASS)
+    @DisplayName("getCityMap method tests")
+    class GetCityMapTest {
+        private Stream<Arguments> data() {
+            ContentfulSys contentfulSys1 = new ContentfulSys();
+            contentfulSys1.setId("id1");
+
+            ContentfulCity contentfulCity1 = new ContentfulCity();
+            contentfulCity1.setSys(contentfulSys1);
+
+            ContentfulEventIncludes contentfulIncludes1 = new ContentfulEventIncludes();
+            contentfulIncludes1.setEntry(List.of(contentfulCity1));
+
+            ContentfulEventResponse response0 = new ContentfulEventResponse();
+
+            ContentfulEventResponse response1 = new ContentfulEventResponse();
+            response1.setIncludes(contentfulIncludes1);
+
+            return Stream.of(
+                    arguments(response0, Collections.emptyMap()),
+                    arguments(response1, Map.of("id1", contentfulCity1))
+            );
+        }
+
+        @ParameterizedTest
+        @MethodSource("data")
+        void getCityMap(ContentfulEventResponse response, Map<String, ContentfulCity> expected) {
+            assertEquals(expected, ContentfulUtils.getCityMap(response));
+        }
+    }
+
+    private static ContentfulError createContentfulError(boolean isSysNotNull, boolean isDetailsNotNull, String sysId,
+                                                         String sysType, String detailsType, String detailsLinkType, String detailsId) {
+        ContentfulError contentfulError = new ContentfulError();
+
+        if (isSysNotNull) {
+            ContentfulSys sys = new ContentfulSys();
+            sys.setId(sysId);
+            sys.setType(sysType);
+
+            contentfulError.setSys(sys);
+        }
+
+        if (isDetailsNotNull) {
+            ContentfulErrorDetails details = new ContentfulErrorDetails();
+            details.setType(detailsType);
+            details.setLinkType(detailsLinkType);
+            details.setId(detailsId);
+
+            contentfulError.setDetails(details);
+        }
+
+        return contentfulError;
+    }
+
+    @Nested
+    @TestInstance(TestInstance.Lifecycle.PER_CLASS)
+    @DisplayName("getErrorSet method tests")
+    class GetErrorSetTest {
+
+        private Stream<Arguments> data() {
+            ContentfulEventResponse response0 = new ContentfulEventResponse();
+
+            ContentfulEventResponse response1 = new ContentfulEventResponse();
+            response1.setErrors(List.of(
+                    createContentfulError(false, false, null, null, null, null, "id0"),
+                    createContentfulError(true, false, null, null, null, null, "id1"),
+                    createContentfulError(true, false, "notResolvable", null, null, null, "id2"),
+                    createContentfulError(true, false, null, "error", null, null, "id3"),
+                    createContentfulError(true, false, "notResolvable", "error", null, null, "id4"),
+                    createContentfulError(false, true, null, null, null, null, "id5"),
+                    createContentfulError(false, true, null, null, "Link", null, "id6"),
+                    createContentfulError(false, true, null, null, null, ContentfulUtils.ENTRY_LINK_TYPE, "id7"),
+                    createContentfulError(false, true, null, null, "Link", ContentfulUtils.ENTRY_LINK_TYPE, "id8"),
+                    createContentfulError(true, true, null, null, null, null, "id10"),
+                    createContentfulError(true, true, null, null, null, ContentfulUtils.ENTRY_LINK_TYPE, "id10"),
+                    createContentfulError(true, true, null, null, "Link", null, "id11"),
+                    createContentfulError(true, true, null, null, "Link", ContentfulUtils.ENTRY_LINK_TYPE, "id12"),
+                    createContentfulError(true, true, null, "error", null, null, "id13"),
+                    createContentfulError(true, true, null, "error", null, ContentfulUtils.ENTRY_LINK_TYPE, "id14"),
+                    createContentfulError(true, true, null, "error", "Link", null, "id15"),
+                    createContentfulError(true, true, null, "error", "Link", ContentfulUtils.ENTRY_LINK_TYPE, "id16"),
+                    createContentfulError(true, true, "notResolvable", null, null, null, "id17"),
+                    createContentfulError(true, true, "notResolvable", null, null, ContentfulUtils.ENTRY_LINK_TYPE, "id18"),
+                    createContentfulError(true, true, "notResolvable", null, "Link", null, "id19"),
+                    createContentfulError(true, true, "notResolvable", null, "Link", ContentfulUtils.ENTRY_LINK_TYPE, "id20"),
+                    createContentfulError(true, true, "notResolvable", "error", null, null, "id21"),
+                    createContentfulError(true, true, "notResolvable", "error", null, ContentfulUtils.ENTRY_LINK_TYPE, "id22"),
+                    createContentfulError(true, true, "notResolvable", "error", "Link", null, "id23"),
+                    createContentfulError(true, true, "notResolvable", "error", "Link", ContentfulUtils.ENTRY_LINK_TYPE, "id24")
+            ));
+
+            return Stream.of(
+                    arguments(response0, null, Collections.emptySet()),
+                    arguments(response1, "", Collections.emptySet()),
+                    arguments(response1, ContentfulUtils.ENTRY_LINK_TYPE, Set.of("id24"))
+            );
+        }
+
+        @ParameterizedTest
+        @MethodSource("data")
+        void getErrorSet(ContentfulResponse<?, ? extends ContentfulIncludes> response, String linkType, Set<String> expected) {
+            assertEquals(expected, ContentfulUtils.getErrorSet(response, linkType));
         }
     }
 
@@ -187,162 +1275,54 @@ public class ContentfulUtilsTest {
                     arguments("abc", new ExtractSet(
                                     List.of(new ExtractPair("([a-z]+)", 1)),
                                     "Invalid property: %s"),
-                            "abc"),
+                            null, "abc"),
                     arguments("abc", new ExtractSet(
                                     List.of(new ExtractPair("^[\\s]*([a-z]+)[\\s]*$", 1)),
                                     "Invalid property: %s"),
-                            "abc"),
+                            null, "abc"),
                     arguments(" abc", new ExtractSet(
                                     List.of(new ExtractPair("^[\\s]*([a-z]+)[\\s]*$", 1)),
                                     "Invalid property: %s"),
-                            "abc"),
+                            null, "abc"),
                     arguments("abc ", new ExtractSet(
                                     List.of(new ExtractPair("^[\\s]*([a-z]+)[\\s]*$", 1)),
                                     "Invalid property: %s"),
-                            "abc"),
+                            null, "abc"),
                     arguments(" abc ", new ExtractSet(
                                     List.of(new ExtractPair("^[\\s]*([a-z]+)[\\s]*$", 1)),
                                     "Invalid property: %s"),
-                            "abc")
-            );
-        }
-
-        @ParameterizedTest
-        @MethodSource("data")
-        void extractProperty(String value, ExtractSet extractSet, String expected) {
-            assertEquals(expected, ContentfulUtils.extractProperty(value, extractSet));
-        }
-    }
-
-    @Nested
-    @TestInstance(TestInstance.Lifecycle.PER_CLASS)
-    @DisplayName("extractProperty method tests (with exception)")
-    class ExtractPropertyWithExceptionTest {
-        private Stream<Arguments> data() {
-            return Stream.of(
+                            null, "abc"),
                     arguments("42", new ExtractSet(
-                            List.of(new ExtractPair("([a-z]+)", 1)),
-                            "Invalid property: %s")),
+                                    List.of(new ExtractPair("([a-z]+)", 1)),
+                                    "Invalid property: %s"),
+                            IllegalArgumentException.class, null),
                     arguments("42", new ExtractSet(
-                            List.of(new ExtractPair("^[\\s]*([a-z]+)[\\s]*$", 1)),
-                            "Invalid property: %s")),
+                                    List.of(new ExtractPair("^[\\s]*([a-z]+)[\\s]*$", 1)),
+                                    "Invalid property: %s"),
+                            IllegalArgumentException.class, null),
                     arguments(" 42", new ExtractSet(
-                            List.of(new ExtractPair("^[\\s]*([a-z]+)[\\s]*$", 1)),
-                            "Invalid property: %s")),
+                                    List.of(new ExtractPair("^[\\s]*([a-z]+)[\\s]*$", 1)),
+                                    "Invalid property: %s"),
+                            IllegalArgumentException.class, null),
                     arguments("42 ", new ExtractSet(
-                            List.of(new ExtractPair("^[\\s]*([a-z]+)[\\s]*$", 1)),
-                            "Invalid property: %s")),
+                                    List.of(new ExtractPair("^[\\s]*([a-z]+)[\\s]*$", 1)),
+                                    "Invalid property: %s"),
+                            IllegalArgumentException.class, null),
                     arguments(" 42 ", new ExtractSet(
-                            List.of(new ExtractPair("^[\\s]*([a-z]+)[\\s]*$", 1)),
-                            "Invalid property: %s"))
+                                    List.of(new ExtractPair("^[\\s]*([a-z]+)[\\s]*$", 1)),
+                                    "Invalid property: %s"),
+                            IllegalArgumentException.class, null)
             );
         }
 
         @ParameterizedTest
         @MethodSource("data")
-        void extractProperty(String value, ExtractSet extractSet) {
-            assertThrows(IllegalArgumentException.class, () -> ContentfulUtils.extractProperty(value, extractSet));
-        }
-    }
-
-    @Nested
-    @TestInstance(TestInstance.Lifecycle.PER_CLASS)
-    @DisplayName("extractTwitter method tests")
-    class ExtractTwitterTest {
-        private Stream<Arguments> data() {
-            return Stream.of(
-                    arguments(null, null),
-                    arguments("", ""),
-                    arguments(" ", ""),
-                    arguments("arungupta", "arungupta"),
-                    arguments(" arungupta", "arungupta"),
-                    arguments("arungupta ", "arungupta"),
-                    arguments(" arungupta ", "arungupta"),
-                    arguments("tagir_valeev", "tagir_valeev"),
-                    arguments("kuksenk0", "kuksenk0"),
-                    arguments("DaschnerS", "DaschnerS"),
-                    arguments("@dougqh", "dougqh"),
-                    arguments("42", "42"),
-                    arguments("@42", "42")
-            );
-        }
-
-        @ParameterizedTest
-        @MethodSource("data")
-        void extractTwitter(String value, String expected) {
-            assertEquals(expected, ContentfulUtils.extractTwitter(value));
-        }
-    }
-
-    @Nested
-    @TestInstance(TestInstance.Lifecycle.PER_CLASS)
-    @DisplayName("extractTwitter method tests (with exception)")
-    class ExtractTwitterWithExceptionTest {
-        private Stream<Arguments> data() {
-            return Stream.of(
-                    arguments("%"),
-                    arguments("%42"),
-                    arguments("%dougqh"),
-                    arguments("dougqh%"),
-                    arguments("dou%gqh")
-            );
-        }
-
-        @ParameterizedTest
-        @MethodSource("data")
-        void extractTwitter(String value) {
-            assertThrows(IllegalArgumentException.class, () -> ContentfulUtils.extractTwitter(value));
-        }
-    }
-
-    @Nested
-    @TestInstance(TestInstance.Lifecycle.PER_CLASS)
-    @DisplayName("extractGitHub method tests")
-    class ExtractGitHubTest {
-        private Stream<Arguments> data() {
-            return Stream.of(
-                    arguments(null, null),
-                    arguments("", ""),
-                    arguments(" ", ""),
-                    arguments("cloudkserg", "cloudkserg"),
-                    arguments(" cloudkserg", "cloudkserg"),
-                    arguments("cloudkserg ", "cloudkserg"),
-                    arguments(" cloudkserg ", "cloudkserg"),
-                    arguments("pjBooms", "pjBooms"),
-                    arguments("andre487", "andre487"),
-                    arguments("Marina-Miranovich", "Marina-Miranovich"),
-                    arguments("https://github.com/inponomarev", "inponomarev"),
-                    arguments("http://github.com/inponomarev", "inponomarev"),
-                    arguments("https://niquola.github.io/blog/", "niquola"),
-                    arguments("http://niquola.github.io/blog/", "niquola")
-            );
-        }
-
-        @ParameterizedTest
-        @MethodSource("data")
-        void extractGitHub(String value, String expected) {
-            assertEquals(expected, ContentfulUtils.extractGitHub(value));
-        }
-    }
-
-    @Nested
-    @TestInstance(TestInstance.Lifecycle.PER_CLASS)
-    @DisplayName("extractGitHub method tests (with exception)")
-    class ExtractGitHubWithExceptionTest {
-        private Stream<Arguments> data() {
-            return Stream.of(
-                    arguments("%"),
-                    arguments("%42"),
-                    arguments("%dougqh"),
-                    arguments("dougqh%"),
-                    arguments("dou%gqh")
-            );
-        }
-
-        @ParameterizedTest
-        @MethodSource("data")
-        void extractGitHub(String value) {
-            assertThrows(IllegalArgumentException.class, () -> ContentfulUtils.extractGitHub(value));
+        void extractProperty(String value, ExtractSet extractSet, Class<? extends Throwable> expectedException, String expectedValue) {
+            if (expectedException == null) {
+                assertEquals(expectedValue, ContentfulUtils.extractProperty(value, extractSet));
+            } else {
+                assertThrows(expectedException, () -> ContentfulUtils.extractProperty(value, extractSet));
+            }
         }
     }
 
@@ -404,6 +1384,75 @@ public class ContentfulUtilsTest {
         }
     }
 
+
+    @Nested
+    @TestInstance(TestInstance.Lifecycle.PER_CLASS)
+    @DisplayName("extractPresentationLinks method tests")
+    class ExtractPresentationLinksTest {
+        private static final String ASSET_URL = "https://valid.com";
+
+        private Stream<Arguments> data() {
+            ContentfulSys contentfulSys0 = new ContentfulSys();
+            contentfulSys0.setId("id0");
+
+            ContentfulSys contentfulSys1 = new ContentfulSys();
+            contentfulSys1.setId("id1");
+
+            ContentfulSys contentfulSys2 = new ContentfulSys();
+            contentfulSys2.setId("id2");
+
+            ContentfulLink contentfulLink0 = new ContentfulLink();
+            contentfulLink0.setSys(contentfulSys0);
+
+            ContentfulLink contentfulLink1 = new ContentfulLink();
+            contentfulLink1.setSys(contentfulSys1);
+
+            ContentfulLink contentfulLink2 = new ContentfulLink();
+            contentfulLink2.setSys(contentfulSys2);
+
+            ContentfulAssetFields contentfulAssetFields1 = new ContentfulAssetFields();
+            contentfulAssetFields1.setFile(new ContentfulAssetFieldsFile());
+
+            ContentfulAsset contentfulAsset1 = new ContentfulAsset();
+            contentfulAsset1.setFields(contentfulAssetFields1);
+
+            Map<String, ContentfulAsset> assetMap = Map.of("id1", contentfulAsset1);
+            Set<String> assetErrorSet = Set.of("id0");
+
+            return Stream.of(
+                    arguments(null, null, null, null, null, Collections.emptyList()),
+                    arguments(List.of(contentfulLink0, contentfulLink1), assetMap, assetErrorSet, "talkNameEn", null, List.of(ASSET_URL)),
+                    arguments(List.of(contentfulLink2), assetMap, assetErrorSet, "talkNameEn", NullPointerException.class, null)
+            );
+        }
+
+        @ParameterizedTest
+        @MethodSource("data")
+        void extractPresentationLinks(List<ContentfulLink> links, Map<String, ContentfulAsset> assetMap,
+                                      Set<String> assetErrorSet, String talkNameEn, Class<? extends Throwable> expectedException,
+                                      List<String> expectedValue) {
+            new MockUp<ContentfulUtils>() {
+                @Mock
+                List<String> extractPresentationLinks(Invocation invocation, List<ContentfulLink> links,
+                                                      Map<String, ContentfulAsset> assetMap, Set<String> assetErrorSet,
+                                                      String talkNameEn) {
+                    return invocation.proceed(links, assetMap, assetErrorSet, talkNameEn);
+                }
+
+                @Mock
+                String extractAssetUrl(String value) {
+                    return ASSET_URL;
+                }
+            };
+
+            if (expectedException == null) {
+                assertEquals(expectedValue, ContentfulUtils.extractPresentationLinks(links, assetMap, assetErrorSet, talkNameEn));
+            } else {
+                assertThrows(expectedException, () -> ContentfulUtils.extractPresentationLinks(links, assetMap, assetErrorSet, talkNameEn));
+            }
+        }
+    }
+
     @Nested
     @TestInstance(TestInstance.Lifecycle.PER_CLASS)
     @DisplayName("extractVideoLinks method tests")
@@ -428,40 +1477,34 @@ public class ContentfulUtilsTest {
     class ExtractAssetUrlTest {
         private Stream<Arguments> data() {
             return Stream.of(
-                    arguments(null, null),
-                    arguments("", ""),
-                    arguments(" ", ""),
-                    arguments("//assets.ctfassets.net/oxjq45e8ilak/6sKzieda7fGIQrNXZsR0cZ/bf48435803b5cac81cb4e3c729a581d6/2019_Azul_HTM.pdf", "https://assets.ctfassets.net/oxjq45e8ilak/6sKzieda7fGIQrNXZsR0cZ/bf48435803b5cac81cb4e3c729a581d6/2019_Azul_HTM.pdf"),
-                    arguments(" //assets.ctfassets.net/oxjq45e8ilak/6sKzieda7fGIQrNXZsR0cZ/bf48435803b5cac81cb4e3c729a581d6/2019_Azul_HTM.pdf", "https://assets.ctfassets.net/oxjq45e8ilak/6sKzieda7fGIQrNXZsR0cZ/bf48435803b5cac81cb4e3c729a581d6/2019_Azul_HTM.pdf"),
-                    arguments("//assets.ctfassets.net/oxjq45e8ilak/6sKzieda7fGIQrNXZsR0cZ/bf48435803b5cac81cb4e3c729a581d6/2019_Azul_HTM.pdf ", "https://assets.ctfassets.net/oxjq45e8ilak/6sKzieda7fGIQrNXZsR0cZ/bf48435803b5cac81cb4e3c729a581d6/2019_Azul_HTM.pdf"),
-                    arguments(" //assets.ctfassets.net/oxjq45e8ilak/6sKzieda7fGIQrNXZsR0cZ/bf48435803b5cac81cb4e3c729a581d6/2019_Azul_HTM.pdf ", "https://assets.ctfassets.net/oxjq45e8ilak/6sKzieda7fGIQrNXZsR0cZ/bf48435803b5cac81cb4e3c729a581d6/2019_Azul_HTM.pdf"),
-                    arguments("http://assets.ctfassets.net/oxjq45e8ilak/6sKzieda7fGIQrNXZsR0cZ/bf48435803b5cac81cb4e3c729a581d6/2019_Azul_HTM.pdf", "https://assets.ctfassets.net/oxjq45e8ilak/6sKzieda7fGIQrNXZsR0cZ/bf48435803b5cac81cb4e3c729a581d6/2019_Azul_HTM.pdf"),
-                    arguments("https://assets.ctfassets.net/oxjq45e8ilak/6sKzieda7fGIQrNXZsR0cZ/bf48435803b5cac81cb4e3c729a581d6/2019_Azul_HTM.pdf", "https://assets.ctfassets.net/oxjq45e8ilak/6sKzieda7fGIQrNXZsR0cZ/bf48435803b5cac81cb4e3c729a581d6/2019_Azul_HTM.pdf")
+                    arguments(null, null, null),
+                    arguments("", null, ""),
+                    arguments(" ", null, ""),
+                    arguments("//assets.ctfassets.net/oxjq45e8ilak/6sKzieda7fGIQrNXZsR0cZ/bf48435803b5cac81cb4e3c729a581d6/2019_Azul_HTM.pdf",
+                            null, "https://assets.ctfassets.net/oxjq45e8ilak/6sKzieda7fGIQrNXZsR0cZ/bf48435803b5cac81cb4e3c729a581d6/2019_Azul_HTM.pdf"),
+                    arguments(" //assets.ctfassets.net/oxjq45e8ilak/6sKzieda7fGIQrNXZsR0cZ/bf48435803b5cac81cb4e3c729a581d6/2019_Azul_HTM.pdf",
+                            null, "https://assets.ctfassets.net/oxjq45e8ilak/6sKzieda7fGIQrNXZsR0cZ/bf48435803b5cac81cb4e3c729a581d6/2019_Azul_HTM.pdf"),
+                    arguments("//assets.ctfassets.net/oxjq45e8ilak/6sKzieda7fGIQrNXZsR0cZ/bf48435803b5cac81cb4e3c729a581d6/2019_Azul_HTM.pdf ",
+                            null, "https://assets.ctfassets.net/oxjq45e8ilak/6sKzieda7fGIQrNXZsR0cZ/bf48435803b5cac81cb4e3c729a581d6/2019_Azul_HTM.pdf"),
+                    arguments(" //assets.ctfassets.net/oxjq45e8ilak/6sKzieda7fGIQrNXZsR0cZ/bf48435803b5cac81cb4e3c729a581d6/2019_Azul_HTM.pdf ",
+                            null, "https://assets.ctfassets.net/oxjq45e8ilak/6sKzieda7fGIQrNXZsR0cZ/bf48435803b5cac81cb4e3c729a581d6/2019_Azul_HTM.pdf"),
+                    arguments("http://assets.ctfassets.net/oxjq45e8ilak/6sKzieda7fGIQrNXZsR0cZ/bf48435803b5cac81cb4e3c729a581d6/2019_Azul_HTM.pdf",
+                            null, "https://assets.ctfassets.net/oxjq45e8ilak/6sKzieda7fGIQrNXZsR0cZ/bf48435803b5cac81cb4e3c729a581d6/2019_Azul_HTM.pdf"),
+                    arguments("https://assets.ctfassets.net/oxjq45e8ilak/6sKzieda7fGIQrNXZsR0cZ/bf48435803b5cac81cb4e3c729a581d6/2019_Azul_HTM.pdf",
+                            null, "https://assets.ctfassets.net/oxjq45e8ilak/6sKzieda7fGIQrNXZsR0cZ/bf48435803b5cac81cb4e3c729a581d6/2019_Azul_HTM.pdf"),
+                    arguments("abc", IllegalArgumentException.class, null),
+                    arguments("42", IllegalArgumentException.class, null)
             );
         }
 
         @ParameterizedTest
         @MethodSource("data")
-        void extractAssetUrl(String value, String expected) {
-            assertEquals(expected, ContentfulUtils.extractAssetUrl(value));
-        }
-    }
-
-    @Nested
-    @TestInstance(TestInstance.Lifecycle.PER_CLASS)
-    @DisplayName("extractAssetUrl method tests (with exception)")
-    class ExtractAssetUrlWithExceptionTest {
-        private Stream<Arguments> data() {
-            return Stream.of(
-                    arguments("abc"),
-                    arguments("42")
-            );
-        }
-
-        @ParameterizedTest
-        @MethodSource("data")
-        void extractAssetUrl(String value) {
-            assertThrows(IllegalArgumentException.class, () -> ContentfulUtils.extractAssetUrl(value));
+        void extractAssetUrl(String value, Class<? extends Throwable> expectedException, String expectedValue) {
+            if (expectedException == null) {
+                assertEquals(expectedValue, ContentfulUtils.extractAssetUrl(value));
+            } else {
+                assertThrows(expectedException, () -> ContentfulUtils.extractAssetUrl(value));
+            }
         }
     }
 
@@ -550,67 +1593,125 @@ public class ContentfulUtilsTest {
     class ExtractEventNameTest {
         private Stream<Arguments> data() {
             return Stream.of(
-                    arguments(null, null, null),
-                    arguments(null, "", null),
-                    arguments(null, "abc", null),
-                    arguments("abc", "en", "abc"),
-                    arguments("Moscow", "en", " Msc"),
-                    arguments("Moscow ", "en", " Msc"),
-                    arguments(" Moscow ", "en", " Msc"),
-                    arguments("abc Moscow", "en", "abc Msc"),
-                    arguments("abc Moscow ", "en", "abc Msc"),
-                    arguments("Moscow cde", "en", "Moscow cde"),
-                    arguments(" Moscow cde", "en", " Moscow cde"),
-                    arguments("abc Moscow cde", "en", "abc Moscow cde"),
-                    arguments("Piter", "en", " SPb"),
-                    arguments("Piter ", "en", " SPb"),
-                    arguments(" Piter ", "en", " SPb"),
-                    arguments("abc Piter", "en", "abc SPb"),
-                    arguments("abc Piter ", "en", "abc SPb"),
-                    arguments("Piter cde", "en", "Piter cde"),
-                    arguments(" Piter cde", "en", " Piter cde"),
-                    arguments("abc Piter cde", "en", "abc Piter cde"),
-                    arguments("Moscow", "ru-RU", " Мск"),
-                    arguments("Moscow ", "ru-RU", " Мск"),
-                    arguments(" Moscow ", "ru-RU", " Мск"),
-                    arguments("abc Moscow", "ru-RU", "abc Мск"),
-                    arguments("abc Moscow ", "ru-RU", "abc Мск"),
-                    arguments("Moscow cde", "ru-RU", "Moscow cde"),
-                    arguments(" Moscow cde", "ru-RU", " Moscow cde"),
-                    arguments("abc Moscow cde", "ru-RU", "abc Moscow cde"),
-                    arguments("Piter", "ru-RU", " СПб"),
-                    arguments("Piter ", "ru-RU", " СПб"),
-                    arguments(" Piter ", "ru-RU", " СПб"),
-                    arguments("abc Piter", "ru-RU", "abc СПб"),
-                    arguments("abc Piter ", "ru-RU", "abc СПб"),
-                    arguments("Piter cde", "ru-RU", "Piter cde"),
-                    arguments(" Piter cde", "ru-RU", " Piter cde"),
-                    arguments("abc Piter cde", "ru-RU", "abc Piter cde")
+                    arguments(null, null, null, null),
+                    arguments(null, "", null, null),
+                    arguments(null, "abc", null, null),
+                    arguments("abc", "en", null, "abc"),
+                    arguments("Moscow", "en", null, " Msc"),
+                    arguments("Moscow ", "en", null, " Msc"),
+                    arguments(" Moscow ", "en", null, " Msc"),
+                    arguments("abc Moscow", "en", null, "abc Msc"),
+                    arguments("abc Moscow ", "en", null, "abc Msc"),
+                    arguments("Moscow cde", "en", null, "Moscow cde"),
+                    arguments(" Moscow cde", "en", null, " Moscow cde"),
+                    arguments("abc Moscow cde", "en", null, "abc Moscow cde"),
+                    arguments("Piter", "en", null, " SPb"),
+                    arguments("Piter ", "en", null, " SPb"),
+                    arguments(" Piter ", "en", null, " SPb"),
+                    arguments("abc Piter", "en", null, "abc SPb"),
+                    arguments("abc Piter ", "en", null, "abc SPb"),
+                    arguments("Piter cde", "en", null, "Piter cde"),
+                    arguments(" Piter cde", "en", null, " Piter cde"),
+                    arguments("abc Piter cde", "en", null, "abc Piter cde"),
+                    arguments("Moscow", "ru-RU", null, " Мск"),
+                    arguments("Moscow ", "ru-RU", null, " Мск"),
+                    arguments(" Moscow ", "ru-RU", null, " Мск"),
+                    arguments("abc Moscow", "ru-RU", null, "abc Мск"),
+                    arguments("abc Moscow ", "ru-RU", null, "abc Мск"),
+                    arguments("Moscow cde", "ru-RU", null, "Moscow cde"),
+                    arguments(" Moscow cde", "ru-RU", null, " Moscow cde"),
+                    arguments("abc Moscow cde", "ru-RU", null, "abc Moscow cde"),
+                    arguments("Piter", "ru-RU", null, " СПб"),
+                    arguments("Piter ", "ru-RU", null, " СПб"),
+                    arguments(" Piter ", "ru-RU", null, " СПб"),
+                    arguments("abc Piter", "ru-RU", null, "abc СПб"),
+                    arguments("abc Piter ", "ru-RU", null, "abc СПб"),
+                    arguments("Piter cde", "ru-RU", null, "Piter cde"),
+                    arguments(" Piter cde", "ru-RU", null, " Piter cde"),
+                    arguments("abc Piter cde", "ru-RU", null, "abc Piter cde"),
+                    arguments("abc", "", IllegalArgumentException.class, null),
+                    arguments("abc", "unknown", IllegalArgumentException.class, null)
             );
         }
 
         @ParameterizedTest
         @MethodSource("data")
-        void extractEventName(String name, String locale, String expected) {
-            assertEquals(expected, ContentfulUtils.extractEventName(name, locale));
+        void extractEventName(String name, String locale, Class<? extends Throwable> expectedException, String expectedValue) {
+            if (expectedException == null) {
+                assertEquals(expectedValue, ContentfulUtils.extractEventName(name, locale));
+            } else {
+                assertThrows(expectedException, () -> ContentfulUtils.extractEventName(name, locale));
+            }
         }
     }
 
     @Nested
     @TestInstance(TestInstance.Lifecycle.PER_CLASS)
-    @DisplayName("extractEventName method tests")
-    class ExtractEventNameWithExceptionTest {
+    @DisplayName("extractLocaleValue method tests")
+    class ExtractLocaleValueTest {
         private Stream<Arguments> data() {
             return Stream.of(
-                    arguments("abc", ""),
-                    arguments("abc", "unknown")
+                    arguments(null, null, null),
+                    arguments(Map.of("en", "value"), "en", "value"),
+                    arguments(Map.of("en", "value"), "ru", null)
             );
         }
 
         @ParameterizedTest
         @MethodSource("data")
-        void extractEventName(String name, String locale) {
-            assertThrows(IllegalArgumentException.class, () -> ContentfulUtils.extractEventName(name, locale));
+        void extractLocaleValue(Map<String, String> map, String locale, String expected) {
+            assertEquals(expected, ContentfulUtils.extractLocaleValue(map, locale));
+        }
+    }
+
+    @Nested
+    @TestInstance(TestInstance.Lifecycle.PER_CLASS)
+    @DisplayName("extractCity method tests")
+    class ExtractCityTest {
+        private Stream<Arguments> data() {
+            ContentfulSys contentfulSys0 = new ContentfulSys();
+            contentfulSys0.setId("id0");
+
+            ContentfulSys contentfulSys1 = new ContentfulSys();
+            contentfulSys1.setId("id1");
+
+            ContentfulSys contentfulSys2 = new ContentfulSys();
+            contentfulSys2.setId("id2");
+
+            ContentfulLink contentfulLink0 = new ContentfulLink();
+            contentfulLink0.setSys(contentfulSys0);
+
+            ContentfulLink contentfulLink1 = new ContentfulLink();
+            contentfulLink1.setSys(contentfulSys1);
+
+            ContentfulLink contentfulLink2 = new ContentfulLink();
+            contentfulLink2.setSys(contentfulSys2);
+
+            ContentfulCityFields contentfulCityFields1 = new ContentfulCityFields();
+            contentfulCityFields1.setCityName(Map.of("en", "Name1"));
+
+            ContentfulCity contentfulCity1 = new ContentfulCity();
+            contentfulCity1.setFields(contentfulCityFields1);
+
+            Map<String, ContentfulCity> cityMap = Map.of("id1", contentfulCity1);
+            Set<String> entryErrorSet = Set.of("id0");
+
+            return Stream.of(
+                    arguments(contentfulLink0, cityMap, entryErrorSet, null, "eventName", null, null),
+                    arguments(contentfulLink1, cityMap, entryErrorSet, "en", "eventName", null, "Name1"),
+                    arguments(contentfulLink2, cityMap, entryErrorSet, null, "eventName", NullPointerException.class, null)
+            );
+        }
+
+        @ParameterizedTest
+        @MethodSource("data")
+        void extractCity(ContentfulLink link, Map<String, ContentfulCity> cityMap, Set<String> entryErrorSet, String locale,
+                         String eventName, Class<? extends Throwable> expectedException, String expectedValue) {
+            if (expectedException == null) {
+                assertEquals(expectedValue, ContentfulUtils.extractCity(link, cityMap, entryErrorSet, locale, eventName));
+            } else {
+                assertThrows(expectedException, () -> ContentfulUtils.extractCity(link, cityMap, entryErrorSet, locale, eventName));
+            }
         }
     }
 
@@ -665,6 +1766,99 @@ public class ContentfulUtilsTest {
                 assertEquals(expected.getStartDate(), event.getStartDate());
                 assertEquals(expected.getEndDate(), event.getEndDate());
             }
+        }
+    }
+
+    @Nested
+    @TestInstance(TestInstance.Lifecycle.PER_CLASS)
+    @DisplayName("fixEntryNotResolvableError method tests")
+    class FixEntryNotResolvableErrorTest {
+        private Stream<Arguments> createStream(ContentfulUtils.ConferenceSpaceInfo existingConferenceSpaceInfo, String existingEntryId) {
+            Speaker speaker0 = new Speaker();
+            speaker0.setId(0);
+
+            Speaker speaker1 = new Speaker();
+            speaker1.setId(-1);
+
+            return Stream.of(
+                    arguments(
+                            null,
+                            new HashSet<>(),
+                            new HashMap<>(),
+                            Collections.emptySet(),
+                            Collections.emptyMap()),
+                    arguments(
+                            null,
+                            new HashSet<>(),
+                            new HashMap<>(Map.of(existingEntryId, speaker0)),
+                            Collections.emptySet(),
+                            Map.of(existingEntryId, speaker0)),
+                    arguments(
+                            null,
+                            new HashSet<>(Set.of(existingEntryId)),
+                            new HashMap<>(),
+                            Set.of(existingEntryId),
+                            Collections.emptyMap()),
+                    arguments(
+                            null,
+                            new HashSet<>(Set.of(existingEntryId)),
+                            new HashMap<>(Map.of(existingEntryId, speaker0)),
+                            Set.of(existingEntryId),
+                            Map.of(existingEntryId, speaker0)),
+                    arguments(
+                            existingConferenceSpaceInfo,
+                            new HashSet<>(),
+                            new HashMap<>(),
+                            Collections.emptySet(),
+                            Collections.emptyMap()),
+                    arguments(
+                            existingConferenceSpaceInfo,
+                            new HashSet<>(),
+                            new HashMap<>(Map.of(existingEntryId, speaker0)),
+                            Collections.emptySet(),
+                            Map.of(existingEntryId, speaker0)),
+                    arguments(
+                            existingConferenceSpaceInfo,
+                            new HashSet<>(Set.of(existingEntryId)),
+                            new HashMap<>(),
+                            Collections.emptySet(),
+                            Map.of(existingEntryId, speaker1)),
+                    arguments(
+                            existingConferenceSpaceInfo,
+                            new HashSet<>(Set.of(existingEntryId)),
+                            new HashMap<>(Map.of(existingEntryId, speaker0)),
+                            Set.of(existingEntryId),
+                            Map.of(existingEntryId, speaker0))
+            );
+        }
+
+        private Stream<Arguments> data() {
+            return Stream.concat(
+                    Stream.concat(
+                            Stream.concat(
+                                    Stream.concat(
+                                            Stream.concat(
+                                                    createStream(ContentfulUtils.ConferenceSpaceInfo.COMMON_SPACE_INFO, "6yIC7EpG1EhejCEJDEsuqA"),
+                                                    createStream(ContentfulUtils.ConferenceSpaceInfo.COMMON_SPACE_INFO, "2i2OfmHelyMCiK2sCUoGsS")
+                                            ),
+                                            createStream(ContentfulUtils.ConferenceSpaceInfo.COMMON_SPACE_INFO, "1FDbCMYfsEkiQG6s8CWQwS")
+                                    ),
+                                    createStream(ContentfulUtils.ConferenceSpaceInfo.COMMON_SPACE_INFO, "MPZSTxFNbbjBdf5M5uoOZ")
+                            ),
+                            createStream(ContentfulUtils.ConferenceSpaceInfo.HOLY_JS_SPACE_INFO, "3YSoYRePW0OIeaAAkaweE6")
+                    ),
+                    createStream(ContentfulUtils.ConferenceSpaceInfo.HOLY_JS_SPACE_INFO, "2UddvLNyXmy4YaukAuE4Ao")
+            );
+        }
+
+        @ParameterizedTest
+        @MethodSource("data")
+        void fixEntryNotResolvableError(ContentfulUtils.ConferenceSpaceInfo conferenceSpaceInfo,
+                                        Set<String> entryErrorSet, Map<String, Speaker> speakerMap,
+                                        Set<String> expectedEntryErrorSet, Map<String, Speaker> expectedSpeakerMap) {
+            assertDoesNotThrow(() -> ContentfulUtils.fixEntryNotResolvableError(conferenceSpaceInfo, entryErrorSet, speakerMap));
+            assertEquals(expectedEntryErrorSet, entryErrorSet);
+            assertEquals(expectedSpeakerMap, speakerMap);
         }
     }
 
@@ -1213,5 +2407,42 @@ public class ContentfulUtilsTest {
         void needUpdate(List<String> a, List<String> b, boolean expected) {
             assertEquals(expected, ContentfulUtils.equals(a, b));
         }
+    }
+
+    @Test
+    void iterateAllEntities() {
+        new MockUp<ContentfulUtils>() {
+            @Mock
+            List<String> getLocales() {
+                return Collections.emptyList();
+            }
+
+            @Mock
+            List<EventType> getEventTypes() {
+                return Collections.emptyList();
+            }
+
+            @Mock
+            List<Event> getEvents(String eventName, LocalDate startDate) {
+                return Collections.emptyList();
+            }
+
+            @Mock
+            List<Speaker> getSpeakers(ContentfulUtils.ConferenceSpaceInfo conferenceSpaceInfo, String conferenceCode) {
+                return Collections.emptyList();
+            }
+
+            @Mock
+            List<Talk> getTalks(ContentfulUtils.ConferenceSpaceInfo conferenceSpaceInfo, String conferenceCode) {
+                return Collections.emptyList();
+            }
+
+            @Mock
+            void iterateAllEntities(Invocation invocation) {
+                invocation.proceed();
+            }
+        };
+
+        assertDoesNotThrow(ContentfulUtils::iterateAllEntities);
     }
 }
